--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@
 }
 .int{
   
-  
+  width: 100%;
   padding: 10px 20px;
   margin: 14px;
   border-radius: 8px;
@@ -229,4 +229,19 @@
   position: fixed;
   bottom: 40px;
   right: 80px;
+}
+#preloader{
+  background: #292b2c url("space.jpg") no-repeat center center;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 100;
+}
+.center{
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
