--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     padding: 2em 1em !important;
   }
   .space{
-    background-image: url("space.jpg");
+    background-image: url("space.gif");
     background-size: 100%;
   }
   .cont{
@@ -183,7 +183,7 @@
   position: relative;
   padding: 2%;
   font-family: kalam;
-  background-image: url("space.jpg");
+  background-image: url("space.gif");
   background-size: 100%;
   background-color: black !important;
 }
@@ -231,7 +231,7 @@
   right: 80px;
 }
 #preloader{
-  background: #292b2c url("space.jpg") no-repeat center center;
+  background: #292b2c url("space.gif") no-repeat center center;
   width: 100%;
   height: 100vh;
   position: fixed;
