--- a/style.css
+++ b/style.css
@@ -231,7 +231,9 @@
   right: 80px;
 }
 #preloader{
-  background: #292b2c url("space.gif") no-repeat center center;
+  background: #292b2c no-repeat center center;
+  background-image: url("space.gif");
+  background-size: cover;
   width: 100%;
   height: 100vh;
   position: fixed;
